--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class = "card-white" id = "introducion">
         <h1> Hello, I'm Taylor </h1>
         <h2> Programmer 🤷🏻‍♀️💻 </h2>
-        <img src="../images/Headshot.png" class = "img-circle" width = "100px" alt="Taylor Sheridan">
+        <img src="./images/Headshot.png" class = "img-circle" width = "100px" alt="Taylor Sheridan">
         <p> Recent Masters Graduate from Imperial College London 🎓. Passionate about technology👩‍💻, bad reality TV 📺 and travel 🌍.</p>
         <a href = "https://www.lewagon.com/"  class = "btn-grey" target="_blank">I'm studying here</a>
       </div>
